--- a/proj.android/app/build.gradle
+++ b/proj.android/app/build.gradle
@@ -114,7 +114,7 @@ android.applicationVariants.all { variant ->
     // delete previous files first
     delete "${buildDir}/intermediates/assets/${variant.dirName}"
 
-    variant.mergeAssets.doLast {
+    variant.mergeAssetsProvider.get().doLast {
         copy {
             from "${buildDir}/../../../Resources"
             into "${buildDir}/intermediates/assets/${variant.dirName}"
@@ -126,6 +126,8 @@ android.applicationVariants.all { variant ->
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':libcocos2dx')
-    implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'com.android.support:documentfile:28.0.0'
+
+    implementation "androidx.documentfile:documentfile:1.0.1"
+    implementation "androidx.activity:activity:1.2.3"
+    implementation "androidx.fragment:fragment:1.3.4"
 }
